--- a/public/style.css
+++ b/public/style.css
@@ -12,23 +12,34 @@ body{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-#heading{
+header{
     height: 50px;
     width: 100%;
+    display:flex;
+    align-items: center;
+    padding: 5px;
     margin-top: 0;
+    margin-bottom: 20px;
     background-color: #333;
     color: #fff;
 }
+
+header h4 {
+    margin-left: 20px;
+}
+
 #menu{
-    float: left;
+    position: relative;
+    top: 15vh;
     margin-top: 10px;
+    margin-left: 40px;
 }
 #menu li{
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 #menu ul li input{
     height: 50px;
-    width: 100px;
+    width: 80%;;
 }
 
 /* #game-field{
@@ -38,10 +49,18 @@ body{
     margin: 0 auto;
 } */
 #snake{
+    visibility: hidden;
     background-color: black;
     border: 20px solid #252525;
 }
 
 footer{
+    padding: 5px;
+    width: 100%;
+    background: #252525;
+    position: absolute;
+    bottom: 0px;
+    left: 0;
     text-align: center;
+    color: #fff;
 }
