--- a/public/style.css
+++ b/public/style.css
@@ -29,6 +29,7 @@ header h4 {
 }
 
 #menu{
+    visibility: hidden;
     position: relative;
     top: 15vh;
     margin-top: 10px;
@@ -41,13 +42,26 @@ header h4 {
     height: 50px;
     width: 80%;;
 }
-
-/* #game-field{
-    margin-top: 10px;
-    height:610px;
-    width: 70%;
+#user-form{
+    border-radius: 10px; 
+    background: #dbdada;
+    padding: 20px;
     margin: 0 auto;
-} */
+    width: 80%;
+    position: absolute;
+    top: 15vh;
+    left: 10%;
+    z-index: 3;
+}
+
+#user-form button{
+    margin-top: 10px;
+}
+
+#game-field{
+    visibility: hidden;
+} 
+
 #snake{
     visibility: hidden;
     background-color: black;
@@ -58,7 +72,7 @@ footer{
     padding: 5px;
     width: 100%;
     background: #252525;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     left: 0;
     text-align: center;
