--- a/public/style.css
+++ b/public/style.css
@@ -62,10 +62,10 @@ header h4 {
     visibility: hidden;
 } 
 
-#snake{
+#snake-race{
     visibility: hidden;
     background-color: black;
-    border: 10px solid #252525;
+    border: 2px solid #252525;
 }
 
 footer{
