--- a/public/style.css
+++ b/public/style.css
@@ -1,80 +1,190 @@
-*{
-    margin: 0;
-    padding: 0;
-    list-style: none;
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  box-sizing: border-box;
 }
-body{
-   /*  overflow-y: auto;
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+}
+
+body {
+  /*  overflow-y: auto;
     display: flex;
     align-items: center;
     justify-content: center; */
-    height: 100%;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  height: 100%;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  text-align: center;
 }
 
-header{
-    height: 50px;
-    width: 100%;
-    display:flex;
-    align-items: center;
-    padding: 5px;
-    margin-top: 0;
-    margin-bottom: 20px;
-    background-color: #333;
-    color: #fff;
+header {
+  height: 50px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  margin-top: 0;
+  margin-bottom: 20px;
+  background-color: #333;
+  color: #fff;
 }
 
 header h4 {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
-#menu{
-    visibility: hidden;
-    position: relative;
-    top: 15vh;
-    margin-top: 10px;
-    margin-left: 40px;
+#menu {
+  height: 45%;
+  visibility: hidden;
+  position: relative;
+  top: 10%;
+  margin-top: 10px;
+  margin-left: 40px;
+  margin-bottom: 10px;
 }
-#menu li{
-    margin-bottom: 30px;
-}
-#menu ul li input{
-    height: 50px;
-    width: 80%;;
-}
-#user-form{
-    border-radius: 10px; 
-    background: #dbdada;
-    padding: 20px;
-    margin: 0 auto;
-    width: 80%;
-    position: absolute;
-    top: 15vh;
-    left: 10%;
-    z-index: 3;
+#menu li {
+  padding: 8px;
+  margin-bottom: 7px;
+  color: #ffffff;
 }
 
-#user-form button{
-    margin-top: 10px;
+#menu ul li input {
+  width: 90%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-#game-field{
-    visibility: hidden;
-} 
-
-#snake-race{
-    visibility: hidden;
-    background-color: black;
-    border: 2px solid #252525;
+.menu li:hover {
+  background-color: #0099cc;
 }
 
-footer{
-    padding: 5px;
+#user-form {
+  border-radius: 10px;
+  background: #dbdada;
+  padding: 20px;
+  margin: 0 auto;
+  width: 80%;
+  position: absolute;
+  top: 15vh;
+  left: 10%;
+  z-index: 3;
+}
+
+#user-form button {
+  margin-top: 10px;
+}
+#welcome-div {
+  float: left;
+}
+#game-field {
+  visibility: hidden;
+}
+
+#snake-race {
+  visibility: hidden;
+  background-color: black;
+  border: 2px solid #252525;
+}
+
+footer {
+  padding: 5px;
+  width: 100%;
+  background: #252525;
+  position: fixed;
+  bottom: 0px;
+  left: 0;
+  text-align: center;
+  color: #fff;
+}
+
+/*Media queries*/
+[class*="col-"] {
+  width: 100%;
+}
+
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .col-s-1 {
+    width: 8.33%;
+  }
+  .col-s-2 {
+    width: 16.66%;
+  }
+  .col-s-3 {
+    width: 25%;
+  }
+  .col-s-4 {
+    width: 33.33%;
+  }
+  .col-s-5 {
+    width: 41.66%;
+  }
+  .col-s-6 {
+    width: 50%;
+  }
+  .col-s-7 {
+    width: 58.33%;
+  }
+  .col-s-8 {
+    width: 66.66%;
+  }
+  .col-s-9 {
+    width: 75%;
+  }
+  .col-s-10 {
+    width: 83.33%;
+  }
+  .col-s-11 {
+    width: 91.66%;
+  }
+  .col-s-12 {
     width: 100%;
-    background: #252525;
-    position: fixed;
-    bottom: 0px;
-    left: 0;
-    text-align: center;
-    color: #fff;
+  }
+}
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {
+    width: 8.33%;
+  }
+  .col-2 {
+    width: 16.66%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.33%;
+  }
+  .col-5 {
+    width: 41.66%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-7 {
+    width: 58.33%;
+  }
+  .col-8 {
+    width: 66.66%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-10 {
+    width: 83.33%;
+  }
+  .col-11 {
+    width: 91.66%;
+  }
+  .col-12 {
+    width: 100%;
+  }
 }
