--- a/public/style.css
+++ b/public/style.css
@@ -21,6 +21,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center; */
+  background: #608da7;
+  background-size: cover;
+  background-attachment: fixed;
   height: 100%;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   text-align: center;
@@ -87,11 +90,31 @@ header h4 {
 #game-field {
   visibility: hidden;
 }
+/* #score-board {
+  visibility: hidden;
+  background-color: #333;
+  border: 2px solid black;
+  margin-bottom: 3px;
+} */
 
 #snake-race {
   visibility: hidden;
   background-color: black;
   border: 2px solid #252525;
+}
+
+.scorediv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  float: left;
+  margin: 5px auto;
+  background: white;
+  color: black;
+  border: 1px solid #000;
+  height: 50px;
+  padding: 10px;
+  z-index: 4;
 }
 
 footer {
