--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@
 
 [class*="col-"] {
   float: left;
-  padding: 15px;
+  padding: 20px;
 }
 
 body {
@@ -25,23 +25,27 @@ body {
   background-size: cover;
   background-attachment: fixed;*/
   height: 100%;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 2rem;
 }
 
+#logo {
+  margin-right: 20px;
+}
 header {
   height: 50px;
   width: 100%;
   display: flex;
   align-items: center;
-  padding: 15px;
-  margin-top: 0;
   margin-bottom: 20px;
   background-color: #333;
   color: #fff;
+  letter-spacing: 5px;
+  padding: 10px;
 }
-header h4 {
+header h2 {
   margin-left: 20px;
+  margin: auto 0;
 }
 
 #login-form {
@@ -50,16 +54,15 @@ header h4 {
   padding: 20px;
   margin: 0 auto;
   width: 80%;
-  position: absolute;
-  top: 15vh;
+  position: relative;
+  top: 50vh;
   left: 10%;
-  z-index: 3;
 }
 #login-form button {
   margin-top: 10px;
 }
 
-#menu {
+#menu-area {
   height: 45%;
   visibility: hidden;
   position: relative;
@@ -68,35 +71,39 @@ header h4 {
   margin-left: 40px;
   margin-bottom: 10px;
 }
-#menu li {
+#menu-area li {
   padding: 8px;
   margin-bottom: 7px;
   color: #ffffff;
 }
-#menu ul li input {
+#menu-area ul li input {
   width: 90%;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
-.menu li:hover {
+/* #menu-area li:hover {
   background-color: #0099cc;
-}
+} */
 
 #users-area {
   visibility: hidden;
 }
 #logout {
   position: relative;
-  bottom: 40vh;
+  margin-top: 50px;
 }
-.users-area li:hover {
+/* #users-area li:hover {
   background-color: #0099cc;
-}
+} */
 
 #welcome-div {
   float: left;
 }
 #game-field {
   visibility: hidden;
+}
+
+.well-sm:hover {
+  background-color: #0099cc;
 }
 
 #snake-race {
