--- a/public/style.css
+++ b/public/style.css
@@ -102,10 +102,14 @@ header h2 {
   visibility: hidden;
 }
 
-.underline:hover {
-  background-color: #fff;
-  border-radius: 10px;
-  border-bottom: 1px dashed #000;
+.noBottom-margin {
+  margin-bottom: 0;
+}
+
+#versus {
+  visibility: hidden;
+  margin-bottom: 10px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 #snake-race {
