--- a/public/style.css
+++ b/public/style.css
@@ -28,6 +28,17 @@ body {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 2rem;
 }
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.center {
+  float: center;
+}
 
 #logo {
   margin-right: 20px;
@@ -110,6 +121,10 @@ header h2 {
   visibility: hidden;
   margin-bottom: 10px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+#p-two {
+  float: left;
 }
 
 #snake-race {
