--- a/public/style.css
+++ b/public/style.css
@@ -24,16 +24,21 @@ body {
   /* background: #608da7; 
   background-size: cover;
   background-attachment: fixed;*/
+  background: -webkit-image-set(url(chrome-search://theme/IDR_THEME_NTP_BACKGROUND?cknkimpcfkpmmikggddpidpmaljigegp) 1x, url(chrome-search://theme/IDR_THEME_NTP_BACKGROUND@2x?cknkimpcfkpmmikggddpidpmaljigegp) 2x);
   height: 100%;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 2rem;
 }
 .left {
+  position: relative;
   float: left;
+  width: 50%;
 }
 
 .right {
+  position: relative;
   float: right;
+  width: 50%;
 }
 
 .center {
@@ -118,6 +123,7 @@ header h2 {
 }
 
 #versus {
+  width: 500px;
   visibility: hidden;
   margin-bottom: 10px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
